force-app/main/default/objects/Client_Log__c/Client_Log__c.object-meta.xml
<CustomObject>
    <description>Holds all Client log records</description>
    <label>Client Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Client Log Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>