force-app/main/default/objects/Client_Log__c/fields/Additional_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Support Requested</label>
    <type>Checkbox</type>
</CustomField>