force-app/main/default/objects/Client_Log__c/fields/Client_Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Log_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id,   Client_Lookup__r.Name &amp;&quot; &quot;&amp;    Dog_Lookup__r.Name   &amp;&quot; &quot;&amp;  TEXT(Date_of_Log__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Log Name</label>
    <type>Text</type>
</CustomField>