force-app/main/default/objects/Client_Log__c/fields/Client_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Client_Lookup__c</fullName>
    <description>Looks to the client record who is connected with this log record</description>
    <label>Client Lookup</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Client Logs</relationshipLabel>
    <relationshipName>Client_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>