force-app/main/default/objects/Client_Log__c/fields/Date_of_Log__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Log__c</fullName>
    <label>Date of Log</label>
    <type>Date</type>
</CustomField>