force-app/main/default/objects/Client_Log__c/fields/Dog_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Dog_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dog associated with this client log</description>
    <label>Dog Lookup</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Client Logs</relationshipLabel>
    <relationshipName>Client_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>