force-app/main/default/objects/Client_Log__c/fields/Hours_of_Other_Training__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Other_Training__c</fullName>
    <label>Hours of Other Training</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>