force-app/main/default/objects/Client_Log__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Client Logs (Team)</relationshipLabel>
    <relationshipName>Client_Logs1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>