force-app/main/default/objects/Client_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Log__c</columns>
    <columns>Client_Lookup__c</columns>
    <columns>Dog_Lookup__c</columns>
    <columns>Hours_of_Other_Training__c</columns>
    <columns>Hours_of_Public_Training__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>