force-app/main/default/objects/Client_Log__c/listViews/All_Client_Logs.listView-meta.xml
<ListView>
    <fullName>All_Client_Logs</fullName>
    <columns>Client_Log_Name__c</columns>
    <columns>Client_Lookup__c</columns>
    <columns>Dog_Lookup__c</columns>
    <columns>Team_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Client Logs</label>
</ListView>